[tool.poetry]
authors = [
  "Anton Helm <anton.helm@tecnico.ulisboa.pt>",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
]
description = "Post-processing and visualization for PIC codes"
documentation = "https://github.com/GoLP-IST/nata"
homepage = "https://github.com/GoLP-IST/nata"
keywords = ["post-processing", "visualization", "particle-in-cell"]
license = "MIT"
maintainers = [
  "Anton Helm <anton.helm@tecnico.ulisboa.pt>",
  "Fabio Cruz <fabio.cruz@tecnico.ulisboa.pt>",
]
name = "nata"
readme = "README.md"
repository = "https://github.com/GoLP-IST/nata"
version = "0.0.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/GoLP-IST/nata/issues"

[tool.poetry.dependencies]
dask = {extras = ["array"], version = "^2.26.0"}
dataclasses = {version = "^0.7", python = ">=3.6 <3.7"}
h5py = "^3.1.0"
ipywidgets = "^7.5.1"
matplotlib = "^3.3.4"
ndindex = "^1.4"
numpy = "^1.20.1"
python = "^3.8"
jupyterlab = {version = "^3.0.10", extras = ["jupyter"]}

[tool.poetry.dev-dependencies]
hypothesis = "^5.10.4"
pytest = ">5.0"
recommonmark = {version = "^0.6.0", optional = true}
sphinx = {version = "^3.0.3", optional = true}
sphinx-rtd-theme = {version = "^0.4.3", optional = true}
ipdb = {version = "^0.13.6", optional = true, extras = ["devtools"]}

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "recommonmark"]

[tool.isort]
atomic = true
force_single_line = true
known_first_party = "nata"
known_third_party = ["attr", "h5py", "matplotlib", "numpy", "pytest", "hypothesis"]
line_length = 88

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py38']

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
