[tool.poetry]
authors = [
  "Anton Helm <anton.helm@tecnico.ulisboa.pt>",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
]
description = "Post-processing and visualization for PIC codes"
documentation = "https://github.com/GoLP-IST/nata"
homepage = "https://github.com/GoLP-IST/nata"
keywords = ["post-processing", "visualization", "particle-in-cell"]
license = "MIT"
maintainers = [
  "Anton Helm <anton.helm@tecnico.ulisboa.pt>",
  "Fabio Cruz <fabio.cruz@tecnico.ulisboa.pt>",
]
name = "nata"
readme = "README.md"
repository = "https://github.com/GoLP-IST/nata"
version = "0.0.2"
include = ["examples/*"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/GoLP-IST/nata/issues"

[tool.poetry.dependencies]
dask = {extras = ["array"], version = "^2.26.0"}
h5py = "^3.1.0"
matplotlib = "^3.3.4"
ndindex = "^1.4"
numpy = "^1.20.1"
python = "^3.8"
jupyterlab = {version = "^3.0.10", optional = true}
ipywidgets = {version = "^7.6.3", optional = true}
jupyter = {version = "^1.0.0", optional = true}

[tool.poetry.dev-dependencies]
hypothesis = "^5.10.4"
pytest = ">5.0"
recommonmark = {version = "^0.6.0", optional = true}
sphinx = {version = "^3.0.3", optional = true}

[tool.poetry.extras]
docs = ["sphinx", "recommonmark"]
jupyter = ["jupyterlab", "ipywidgets", "jupyter"]

[tool.isort]
atomic = true
force_single_line = true
known_first_party = "nata"
known_third_party = ["attr", "h5py", "matplotlib", "numpy", "pytest", "hypothesis"]
line_length = 88

[tool.black]
line-length = 88
target-version = ['py38']

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
